# recombine

./: .gitignore  LICENSE  readme.md  recombine.py  setup.cfg
recombine/: __init__.py
test/: CMakeLists.txt  expected.cpp  recombine.yaml
test/original/: CMakeLists.txt  main.cpp  test_original.cpp
test/original/classes/: Class1.cpp  Class2.cpp  Class3.cpp
test/original/include/: overrides1.h  overrides2.h  overrides3.h  values.h
test/original/include/api/: Class1.h  Class2.h  Class3.h
test/recombined/: CMakeLists.txt  test_recombined.cpp
